--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
     "require": {
         "php": "^8.1",
         "abrardev/laravel-local-temporary-url": "^1.0",
+        "ctwillie/expo-server-sdk-php": "^2.1",
         "firebase/php-jwt": "^6.10",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "yieldstudio/laravel-expo-notifier": "^0.0.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
