--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "pion/laravel-chunk-upload": "^1.5",
         "yieldstudio/laravel-expo-notifier": "^0.0.11"
     },
     "require-dev": {
