--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "abrardev/laravel-local-temporary-url": "^1.0",
+        "barryvdh/laravel-dompdf": "^3.0",
         "ctwillie/expo-server-sdk-php": "^2.1",
         "firebase/php-jwt": "^6.10",
         "guzzlehttp/guzzle": "^7.2",
